# python-project-49

./: .gitignore  Makefile  README.md  README.md YES  brain-calc-demo.cast  brain-even-demo.cast  pyproject.toml  pyproject.toml  YES  pyproject.toml YES
.github/workflows/: sonarqube.yml
brain_games/: cli.py  engine.py  engine.py YES
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_even.py.save  brain_gcd.py  brain_prime.py  brain_prime.py YES  brain_progression.py
scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  brain_progression.py YES
