[project]
name = "brain-games"
version = "0.1.0"
description = "Brain Games"
authors = [{name = "Your Name"}]
readme = "README.md"
dependencies = [
    "prompt",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
