[project]
name = "hexlet-code"
version = "0.1.0"
description = "Brain Games"
authors = [{name = "Polva31"}]
readme = "README.md"
dependencies = [
    "asciinema>=2.4.0",
    "prompt",
]

[project.scripts]
brain-games = "scripts.brain_games:main"
brain-even = "scripts.brain_even:main"
brain-calc = "scripts.brain_calc:main"
brain-gcd = "scripts.brain_gcd:main"
brain-progression = "scripts.brain_progression:main"
brain-prime = "scripts.brain_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
